# wikisearch-rs

./: Cargo.toml
src/: main.rs  search.rs  slash_commands.rs
