[package]
name = "wikisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]}
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
percent-encoding = "2.1"
unescape = "0.1.0"
lazy_static = "1.4.0"
rusqlite = "0.26.3"
unicode-normalization = "0.1.19"
